--- a/product.html
+++ b/product.html
@@ -192,14 +192,59 @@
                      <div class="color my-3">
                        <div class="d-flex justify-content-between"
                         <h6 class="font-baloo">Color</h6>
-                        <dic class= "p-2 color-yellow-bg rounded-circle"></div>
+                        <div class= "p-2 color-yellow-bg rounded-circle"><button class="btn font-size 14"></button></div>
+                        <div class= "p-2 color-primary-bg rounded-circle"><button class="btn font-size 14"></button></div>
+                        <div class= "p-2 color-second-bg rounded-circle"><button class="btn font-size 14"></button></div>
+
+
                         </div>
                        </div>
                      <!-- color -->
                 </div>
-                <div class="col-6"></div>
+                <div class="col-6"></div
+                  <div class="qty d-flex">
+                    <h6 class="font-baloo">Qty</h6>
+                    <div class="px-4 d-flex font-rale">
+                     <button class="qty-up border bg-light"><i class= "fas fa-angle-up"></i></button>
+                     <input type="text" class="qty_input border px-2 w-50 bg-light" disabled value="1" placeholder="1">
+                     <button class="qty-up border bg-light"><i class= "fas fa-angle-down"></i></button>
+
+                    </div>
+                    </div>
+                  </div>
              </div>
 
+
+            <!-- size -->
+             <div class="size my-3">
+              <h6 class="font-baloo">Size</h6>
+                <div class="d-flex justify-content-between w-75">
+                     <div class="font-rubik border p-2">
+                       <button class="btn p-0 font-size-14">Small</button>
+
+
+                   </div>
+                   <div class="font-rubik border p-2">
+                     <button class="btn p-0 font-size-14">Medium</button>
+
+
+                 </div>
+                 <div class="font-rubik border p-2">
+                   <button class="btn p-0 font-size-14">Large</button>
+
+
+               </div>
+                  </div>
+               </div>
+
+
+            <!-- size -->
+            <div class="col-12">
+               <h6 class= "font-rubik">Product Description</h6>
+                 <hr>
+                 <p class="font-rale font-size-14">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                 <p class="font-rale font-size-14">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              </div>
 
           </div>
          </div>
