--- a/product.html
+++ b/product.html
@@ -201,18 +201,21 @@
                        </div>
                      <!-- color -->
                 </div>
-                <div class="col-6"></div
+                <div class="col-6">
+                  <!--product qty section -->
                   <div class="qty d-flex">
                     <h6 class="font-baloo">Qty</h6>
                     <div class="px-4 d-flex font-rale">
                      <button class="qty-up border bg-light"><i class= "fas fa-angle-up"></i></button>
                      <input type="text" class="qty_input border px-2 w-50 bg-light" disabled value="1" placeholder="1">
-                     <button class="qty-up border bg-light"><i class= "fas fa-angle-down"></i></button>
+                     <button class="qty-down border bg-light"><i class= "fas fa-angle-down"></i></button>
 
                     </div>
                     </div>
                   </div>
              </div>
+             <!--!product qty section -->
+
 
 
             <!-- size -->
