--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -26,7 +26,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <!-- Custome CSS file -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/Frontend/css/style.css">
 </head>
 
 <body>
@@ -43,7 +43,7 @@
 
     <!-- Primary Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand p-3" href="./index.html"><img src="./assets/Logo/1.png" alt="logo1"></a>
+      <a class="navbar-brand p-3" href="./index.html"><img src="/assets/Logo/1.png" alt="logo1"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -83,16 +83,16 @@
     <section id="banner-area">
       <div class="owl-carousel owl-theme">
         <div class="item">
-          <img src="./assets/OwlCarouselTop/image1.png" alt="Banner1">
+          <img src="/assets/OwlCarouselTop/image1.png" alt="Banner1">
         </div>
         <div class="item">
-          <img src="./assets/OwlCarouselTop/image2.png" alt="Banner2">
+          <img src="/assets/OwlCarouselTop/image2.png" alt="Banner2">
         </div>
         <div class="item">
-          <img src="./assets/OwlCarouselTop/image3.png" alt="Banner3">
+          <img src="/assets/OwlCarouselTop/image3.png" alt="Banner3">
         </div>
         <div class="item">
-          <img src="./assets/OwlCarouselTop/image4.png" alt="Banner4">
+          <img src="/assets/OwlCarouselTop/image4.png" alt="Banner4">
         </div>
       </div>
       <br><br><br><br><br>
@@ -102,7 +102,7 @@
     <!-- Banner Image Men -->
     <section id="banner_image_men">
       <div class="container py-5 text-center">
-        <img src="./assets/bannerImages/image1.png" alt="banner1" class="img-fluid">
+        <img src="/assets/bannerImages/image1.png" alt="banner1" class="img-fluid">
       </div>
     </section>
     <!-- !Banner Image Men -->
@@ -116,7 +116,7 @@
         <div class="owl-carousel owl-theme">
           <div class="item" py-2>
             <div class="product font-rale">
-              <a href="#"><img src="./assets/Products/men/image1.png" alt="product1" class="img-fluid"></a>
+              <a href="#"><img src="/assets/Products/men/image1.png" alt="product1" class="img-fluid"></a>
               <div class="text-center py-2">
                 <h6>Men's Premium Jacket</h6>
                 <div class="rating text-warning font-size-12">
@@ -135,7 +135,7 @@
           </div>
           <div class="item" py-2>
             <div class="product font-rale">
-              <a href="#"><img src="./assets/Products/men/image2.png" alt="product1" class="img-fluid"></a>
+              <a href="#"><img src="/assets/Products/men/image2.png" alt="product1" class="img-fluid"></a>
               <div class="text-center py-2">
                 <h6>Men's Jogger Pants | Tan</h6>
                 <div class="rating text-warning font-size-12">
@@ -154,7 +154,7 @@
           </div>
           <div class="item" py-2>
             <div class="product font-rale">
-              <a href="#"><img src="./assets/Products/men/image3.png" alt="product1" class="img-fluid"></a>
+              <a href="#"><img src="/assets/Products/men/image3.png" alt="product1" class="img-fluid"></a>
               <div class="text-center py-2">
                 <h6>Men's Jogger Pants | Black</h6>
                 <div class="rating text-warning font-size-12">
@@ -173,7 +173,7 @@
           </div>
           <div class="item" py-2>
             <div class="product font-rale">
-              <a href="#"><img src="./assets/Products/men/image4.png" alt="product1" class="img-fluid"></a>
+              <a href="#"><img src="/assets/Products/men/image4.png" alt="product1" class="img-fluid"></a>
               <div class="text-center py-2">
                 <h6>Men's Top & Shorts Outfit</h6>
                 <div class="rating text-warning font-size-12">
@@ -192,7 +192,7 @@
           </div>
           <div class="item" py-2>
             <div class="product font-rale">
-              <a href="#"><img src="./assets/Products/men/image5.png" alt="product1" class="img-fluid"></a>
+              <a href="#"><img src="/assets/Products/men/image5.png" alt="product1" class="img-fluid"></a>
               <div class="text-center py-2">
                 <h6>Men's Streetwear Jacket</h6>
                 <div class="rating text-warning font-size-12">
@@ -219,7 +219,7 @@
     <!-- Banner Image Women -->
     <section id="banner_image_women">
       <div class="container py-5 text-center">
-        <img src="./assets/bannerImages/image2.png" alt="banner2" class="img-fluid">
+        <img src="/assets/bannerImages/image2.png" alt="banner2" class="img-fluid">
       </div>
     </section>
     <!-- !Banner Image Women -->
@@ -233,7 +233,7 @@
         <div class="owl-carousel owl-theme">
           <div class="item" py-2>
             <div class="product font-rale">
-              <a href="#"><img src="./assets/Products/women/image1.png" alt="product1" class="img-fluid"></a>
+              <a href="#"><img src="/assets/Products/women/image1.png" alt="product1" class="img-fluid"></a>
               <div class="text-center py-2">
                 <h6>Women's Crop Top</h6>
                 <div class="rating text-warning font-size-12">
@@ -252,7 +252,7 @@
           </div>
           <div class="item" py-2>
             <div class="product font-rale">
-              <a href="#"><img src="./assets/Products/women/image2.png" alt="product1" class="img-fluid"></a>
+              <a href="#"><img src="/assets/Products/women/image2.png" alt="product1" class="img-fluid"></a>
               <div class="text-center py-2">
                 <h6>Women's Dress</h6>
                 <div class="rating text-warning font-size-12">
@@ -271,7 +271,7 @@
           </div>
           <div class="item" py-2>
             <div class="product font-rale">
-              <a href="#"><img src="./assets/Products/women/image3.png" alt="product1" class="img-fluid"></a>
+              <a href="#"><img src="/assets/Products/women/image3.png" alt="product1" class="img-fluid"></a>
               <div class="text-center py-2">
                 <h6>Women's Short Sleeve Top <br>& Black Pants</h6>
                 <div class="rating text-warning font-size-12">
@@ -290,7 +290,7 @@
           </div>
           <div class="item" py-2>
             <div class="product font-rale">
-              <a href="#"><img src="./assets/Products/women/image4.png" alt="product1" class="img-fluid"></a>
+              <a href="#"><img src="/assets/Products/women/image4.png" alt="product1" class="img-fluid"></a>
               <div class="text-center py-2">
                 <h6>Women's Dress | White w/black accents</h6>
                 <div class="rating text-warning font-size-12">
@@ -309,7 +309,7 @@
           </div>
           <div class="item" py-2>
             <div class="product font-rale">
-              <a href="#"><img src="./assets/Products/women/image5.png" alt="product1" class="img-fluid"></a>
+              <a href="#"><img src="/assets/Products/women/image5.png" alt="product1" class="img-fluid"></a>
               <div class="text-center py-2">
                 <h6>Women's Elegant Dress</h6>
                 <div class="rating text-warning font-size-12">
@@ -329,14 +329,14 @@
         </div>
         <!-- !owl carousel -->
       </div>
-      <br><br><br><br>
+      <br><br><br><br><br>
     </section>
     <!-- !Women's Clothing -->
 
     <!-- Banner Image Kids -->
     <section id="banner_image_kids">
       <div class="container py-5 text-center">
-        <img src="./assets/bannerImages/image3.png" alt="banner2" class="img-fluid">
+        <img src="/assets/bannerImages/image3.png" alt="banner2" class="img-fluid">
       </div>
     </section>
     <!-- !Banner Image Kids -->
@@ -350,7 +350,7 @@
         <div class="owl-carousel owl-theme">
           <div class="item" py-2>
             <div class="product font-rale">
-              <a href="#"><img src="./assets/Products/kids/image1.png" alt="product1" class="img-fluid"></a>
+              <a href="#"><img src="/assets/Products/kids/image1.png" alt="product1" class="img-fluid"></a>
               <div class="text-center py-2">
                 <h6>Kid's Graphic T-Shirt</h6>
                 <div class="rating text-warning font-size-12">
@@ -369,7 +369,7 @@
           </div>
           <div class="item" py-2>
             <div class="product font-rale">
-              <a href="#"><img src="./assets/Products/kids/image2.png" alt="product1" class="img-fluid"></a>
+              <a href="#"><img src="/assets/Products/kids/image2.png" alt="product1" class="img-fluid"></a>
               <div class="text-center py-2">
                 <h6>Kid's Blue & Black Outfitt</h6>
                 <div class="rating text-warning font-size-12">
@@ -388,7 +388,7 @@
           </div>
           <div class="item" py-2>
             <div class="product font-rale">
-              <a href="#"><img src="./assets/Products/kids/image3.png" alt="product1" class="img-fluid"></a>
+              <a href="#"><img src="/assets/Products/kids/image3.png" alt="product1" class="img-fluid"></a>
               <div class="text-center py-2">
                 <h6>Kid's Black & Red Outfit</h6>
                 <div class="rating text-warning font-size-12">
@@ -407,7 +407,7 @@
           </div>
           <div class="item" py-2>
             <div class="product font-rale">
-              <a href="#"><img src="./assets/Products/kids/image4.png" alt="product1" class="img-fluid"></a>
+              <a href="#"><img src="/assets/Products/kids/image4.png" alt="product1" class="img-fluid"></a>
               <div class="text-center py-2">
                 <h6>Kid's White & Navy Outfit</h6>
                 <div class="rating text-warning font-size-12">
@@ -426,7 +426,7 @@
           </div>
           <div class="item" py-2>
             <div class="product font-rale">
-              <a href="#"><img src="./assets/Products/kids/image5.png" alt="product1" class="img-fluid"></a>
+              <a href="#"><img src="/assets/Products/kids/image5.png" alt="product1" class="img-fluid"></a>
               <div class="text-center py-2">
                 <h6>Kid's Light Blue Dress</h6>
                 <div class="rating text-warning font-size-12">
@@ -446,14 +446,14 @@
         </div>
         <!-- !owl carousel -->
       </div>
-      <br><br><br><br>
+      <br><br><br><br><br>
     </section>
     <!-- !Kid's Clothing -->
 
     <!-- Banner Image Accessories -->
     <section id="banner_image_accessories">
       <div class="container py-5 text-center">
-        <img src="./assets/bannerImages/image4.png" alt="banner2" class="img-fluid">
+        <img src="/assets/bannerImages/image4.png" alt="banner2" class="img-fluid">
       </div>
     </section>
     <!-- !Banner Image Accessories -->
@@ -467,7 +467,7 @@
         <div class="owl-carousel owl-theme">
           <div class="item" py-2>
             <div class="product font-rale">
-              <a href="#"><img src="./assets//Products/accessories/image1.png" alt="product1" class="img-fluid"></a>
+              <a href="#"><img src="/assets//Products/accessories/image1.png" alt="product1" class="img-fluid"></a>
               <div class="text-center py-2">
                 <h6>Oversized Glasses</h6>
                 <div class="rating text-warning font-size-12">
@@ -486,7 +486,7 @@
           </div>
           <div class="item" py-2>
             <div class="product font-rale">
-              <a href="#"><img src="./assets/Products/accessories/image2.png" alt="product1" class="img-fluid"></a>
+              <a href="#"><img src="/assets/Products/accessories/image2.png" alt="product1" class="img-fluid"></a>
               <div class="text-center py-2">
                 <h6>iPhone 11|12|13 Pro Phone Case </h6>
                 <div class="rating text-warning font-size-12">
@@ -505,7 +505,7 @@
           </div>
           <div class="item" py-2>
             <div class="product font-rale">
-              <a href="#"><img src="./assets/Products/accessories/image3.png" alt="product1" class="img-fluid"></a>
+              <a href="#"><img src="/assets/Products/accessories/image3.png" alt="product1" class="img-fluid"></a>
               <div class="text-center py-2">
                 <h6>NY Hat</h6>
                 <div class="rating text-warning font-size-12">
@@ -524,7 +524,7 @@
           </div>
           <div class="item" py-2>
             <div class="product font-rale">
-              <a href="#"><img src="./assets/Products/accessories/image4.png" alt="product1" class="img-fluid"></a>
+              <a href="#"><img src="/assets/Products/accessories/image4.png" alt="product1" class="img-fluid"></a>
               <div class="text-center py-2">
                 <h6>Yellow Watch w/Bird Design</h6>
                 <div class="rating text-warning font-size-12">
@@ -543,7 +543,7 @@
           </div>
           <div class="item" py-2>
             <div class="product font-rale">
-              <a href="#"><img src="./assets/Products/accessories/image5.png" alt="product1" class="img-fluid"></a>
+              <a href="#"><img src="/assets/Products/accessories/image5.png" alt="product1" class="img-fluid"></a>
               <div class="text-center py-2">
                 <h6>Black & Gold Watch</h6>
                 <div class="rating text-warning font-size-12">
@@ -563,7 +563,7 @@
         </div>
         <!-- !owl carousel -->
       </div>
-      <br><br><br><br>
+      <br><br><br><br><br>
     </section>
     <!-- !Accessories -->
 
@@ -631,7 +631,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
   <!-- Custom Javascript-->
-  <script src="./index.js"></script>
+  <script src="/Frontend/javascript/index.js"></script>
 </body>
 
 </html>
