--- a/Frontend/cart.html
+++ b/Frontend/cart.html
@@ -109,8 +109,7 @@
                 <div class="qty d-flex pt-2">
                   <div class="d-flex font-rale w-25">
                     <button class="qty-up border bg-light" data-id="pro1"><i class="fas fa-angle-up"></i></button>
-                    <input type="text" data-id="pro1" class="qty_input border px-2 w-100 bg-light" disabled value="1"
-                      placeholder="1">
+                    <input type="text" data-id="pro1" class="qty_input border px-2 w-100 bg-light" disabled value="1" placeholder="1">
                     <button data-id="pro1" class="qty-down border bg-light"><i class="fas fa-angle-down"></i></button>
                   </div>
                   <button type="submit" class="btn font-baloo text-danger px-3 border-right">Delete</button>
@@ -182,14 +181,9 @@
               </div>
             </div>
           </div>
-
-
           <!-- !subtotal section -->
         </div>
-
-
         <!-- shopping cart items -->
-
       </div>
     </section>
     <!-- Shopping cart -->
