--- a/Frontend/product.html
+++ b/Frontend/product.html
@@ -92,13 +92,8 @@
                 <button type="submit" class="btn btn-danger form-control">Proceed to Buy</button>
               </div>
               <div class="col">
-
                 <button type="submit" class="btn btn-warning form-control">Add to Cart</button>
-
               </div>
-
-
-
             </div>
           </div>
           <div class="col-sm-6 py-5">
@@ -121,31 +116,20 @@
               <tr class="font-rale font-size-14">
                 <td>M.R.P.
                 <td><strike>$162.00</strike></td>
-
                 </td>
-
               </tr>
               <tr class="font-rale font-size-14">
                 <td>Price
                 <td class="font-size-20 text-danger">$<span>152.00</span></td>
-
                 </td>
-
               </tr>
               <tr class="font-rale font-size-14">
                 <td>You save
                 <td>$<span class="font-size-16 text-danger">10.00</span></td>
-
                 </td>
-
               </tr>
-
-
             </table>
-
-
             <!--- product price -->
-
 
             <!--- #policy -->
             <div id="policy">
@@ -171,19 +155,14 @@
               </div>
             </div>
 
-
-
             <!--- #policy -->
             <hr>
-
             <!--- order-details-->
             <div id="order-details" class="font-rale d-flex flex-column text-dark">
               <small>Delivery by: July 23 - Apr 1</small>
               <small>Sold by<a href="#"> Daily Fashions</a> (4.5 out of 5 | 18,342 ratings)</small>
               <small><i class="fas fa-map-marker-alt solor-primary"></i>&nbsp;&nbsp;Deliver to Customer -42320</small>
-
             </div>
-
 
             <!--- order-details-->
             <div class="row">
@@ -195,7 +174,6 @@
                     <div class="p-2 color-primary-bg rounded-circle"><button class="btn font-size 14"></button></div>
                     <div class="p-2 color-second-bg rounded-circle"><button class="btn font-size 14"></button></div>
 
-
                   </div>
                 </div>
                 <!-- color -->
@@ -205,17 +183,14 @@
                 <div class="qty d-flex">
                   <h6 class="font-baloo">Qty</h6>
                   <div class="px-4 d-flex font-rale">
-                    <button class="qty-up border bg-light"><i class="fas fa-angle-up"></i></button>
-                    <input type="text" class="qty_input border px-2 w-50 bg-light" disabled value="1" placeholder="1">
-                    <button class="qty-down border bg-light"><i class="fas fa-angle-down"></i></button>
-
+                    <button class="qty-up border bg-light" data-id="pro1"><i class="fas fa-angle-up"></i></button>
+                    <input type="text" data-id="pro1" class="qty_input border px-2 w-50 bg-light" disabled value="1" placeholder="1">
+                    <button data-id="pro1" class="qty-down border bg-light"><i class="fas fa-angle-down"></i></button>
                   </div>
                 </div>
               </div>
             </div>
             <!--!product qty section -->
-
-
 
             <!-- size -->
             <div class="size my-3">
@@ -223,22 +198,15 @@
               <div class="d-flex justify-content-between w-75">
                 <div class="font-rubik border p-2">
                   <button class="btn p-0 font-size-14">Small</button>
-
-
                 </div>
                 <div class="font-rubik border p-2">
                   <button class="btn p-0 font-size-14">Medium</button>
-
-
                 </div>
                 <div class="font-rubik border p-2">
                   <button class="btn p-0 font-size-14">Large</button>
-
-
                 </div>
               </div>
             </div>
-
 
             <!-- size -->
             <div class="col-12">
@@ -255,16 +223,11 @@
                 voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
                 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
-
           </div>
         </div>
       </div>
     </section>
-
-
-
     <!--  !product -->
-
 
 
   </main>
