--- a/Frontend/html/index.html
+++ b/Frontend/html/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>FashionThreads</title>
+  <title>FT - Homepage</title>
 
   <!-- Bootstrap CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -36,8 +36,8 @@
     <div class="strip d-flex justify-content-between px-4 py-1 bg-light">
       <p class="font-rale font-size-12 text-black-50 m-0"> </p>
       <div class="font-rale font-size-14">
-        <a href="#" class="px-3 border-right border-left text-dark">Login</a>
-        <a href="#" class="px-3 border-right text-dark">Create Account</a>
+        <a href="login.html" class="px-3 border-right border-left text-dark">Login</a>
+        <a href="signup.html" class="px-3 border-right text-dark">Create Account</a>
       </div>
     </div>
 
@@ -64,7 +64,7 @@
           </li>
         </ul>
         <form action="#" class="font-size-14 p-3">
-          <a href="#" class="py-2 rounded-pill bg-primary">
+          <a href="cart.html" class="py-2 rounded-pill bg-primary">
             <span class="font-size-16 px-2 text-white"><i class="fas fa-shopping-cart"></i></span>
             <span class="px-3 py-2 rounded-pill text-dark bg-light">0</span>
           </a>
@@ -116,7 +116,7 @@
         <div class="owl-carousel owl-theme">
           <div class="item" py-2>
             <div class="product font-rale">
-              <a href="#"><img src="/assets/Products/men/image1.png" alt="product1" class="img-fluid"></a>
+              <a href="product.html"><img src="/assets/Products/men/image1.png" alt="product1" class="img-fluid"></a>
               <div class="text-center py-2">
                 <h6>Men's Premium Jacket</h6>
                 <div class="rating text-warning font-size-12">
@@ -135,7 +135,7 @@
           </div>
           <div class="item" py-2>
             <div class="product font-rale">
-              <a href="#"><img src="/assets/Products/men/image2.png" alt="product1" class="img-fluid"></a>
+              <a href="product.html"><img src="/assets/Products/men/image2.png" alt="product1" class="img-fluid"></a>
               <div class="text-center py-2">
                 <h6>Men's Jogger Pants | Tan</h6>
                 <div class="rating text-warning font-size-12">
@@ -154,7 +154,7 @@
           </div>
           <div class="item" py-2>
             <div class="product font-rale">
-              <a href="#"><img src="/assets/Products/men/image3.png" alt="product1" class="img-fluid"></a>
+              <a href="product.html"><img src="/assets/Products/men/image3.png" alt="product1" class="img-fluid"></a>
               <div class="text-center py-2">
                 <h6>Men's Jogger Pants | Black</h6>
                 <div class="rating text-warning font-size-12">
@@ -173,7 +173,7 @@
           </div>
           <div class="item" py-2>
             <div class="product font-rale">
-              <a href="#"><img src="/assets/Products/men/image4.png" alt="product1" class="img-fluid"></a>
+              <a href="product.html"><img src="/assets/Products/men/image4.png" alt="product1" class="img-fluid"></a>
               <div class="text-center py-2">
                 <h6>Men's Top & Shorts Outfit</h6>
                 <div class="rating text-warning font-size-12">
@@ -192,7 +192,7 @@
           </div>
           <div class="item" py-2>
             <div class="product font-rale">
-              <a href="#"><img src="/assets/Products/men/image5.png" alt="product1" class="img-fluid"></a>
+              <a href="product.html"><img src="/assets/Products/men/image5.png" alt="product1" class="img-fluid"></a>
               <div class="text-center py-2">
                 <h6>Men's Streetwear Jacket</h6>
                 <div class="rating text-warning font-size-12">
@@ -233,7 +233,7 @@
         <div class="owl-carousel owl-theme">
           <div class="item" py-2>
             <div class="product font-rale">
-              <a href="#"><img src="/assets/Products/women/image1.png" alt="product1" class="img-fluid"></a>
+              <a href="product.html"><img src="/assets/Products/women/image1.png" alt="product1" class="img-fluid"></a>
               <div class="text-center py-2">
                 <h6>Women's Crop Top</h6>
                 <div class="rating text-warning font-size-12">
@@ -252,7 +252,7 @@
           </div>
           <div class="item" py-2>
             <div class="product font-rale">
-              <a href="#"><img src="/assets/Products/women/image2.png" alt="product1" class="img-fluid"></a>
+              <a href="product.html"><img src="/assets/Products/women/image2.png" alt="product1" class="img-fluid"></a>
               <div class="text-center py-2">
                 <h6>Women's Dress</h6>
                 <div class="rating text-warning font-size-12">
@@ -271,7 +271,7 @@
           </div>
           <div class="item" py-2>
             <div class="product font-rale">
-              <a href="#"><img src="/assets/Products/women/image3.png" alt="product1" class="img-fluid"></a>
+              <a href="product.html"><img src="/assets/Products/women/image3.png" alt="product1" class="img-fluid"></a>
               <div class="text-center py-2">
                 <h6>Women's Short Sleeve Top <br>& Black Pants</h6>
                 <div class="rating text-warning font-size-12">
@@ -290,7 +290,7 @@
           </div>
           <div class="item" py-2>
             <div class="product font-rale">
-              <a href="#"><img src="/assets/Products/women/image4.png" alt="product1" class="img-fluid"></a>
+              <a href="product.html"><img src="/assets/Products/women/image4.png" alt="product1" class="img-fluid"></a>
               <div class="text-center py-2">
                 <h6>Women's Dress | White w/black accents</h6>
                 <div class="rating text-warning font-size-12">
@@ -309,7 +309,7 @@
           </div>
           <div class="item" py-2>
             <div class="product font-rale">
-              <a href="#"><img src="/assets/Products/women/image5.png" alt="product1" class="img-fluid"></a>
+              <a href="product.html"><img src="/assets/Products/women/image5.png" alt="product1" class="img-fluid"></a>
               <div class="text-center py-2">
                 <h6>Women's Elegant Dress</h6>
                 <div class="rating text-warning font-size-12">
@@ -350,7 +350,7 @@
         <div class="owl-carousel owl-theme">
           <div class="item" py-2>
             <div class="product font-rale">
-              <a href="#"><img src="/assets/Products/kids/image1.png" alt="product1" class="img-fluid"></a>
+              <a href="product.html"><img src="/assets/Products/kids/image1.png" alt="product1" class="img-fluid"></a>
               <div class="text-center py-2">
                 <h6>Kid's Graphic T-Shirt</h6>
                 <div class="rating text-warning font-size-12">
@@ -369,7 +369,7 @@
           </div>
           <div class="item" py-2>
             <div class="product font-rale">
-              <a href="#"><img src="/assets/Products/kids/image2.png" alt="product1" class="img-fluid"></a>
+              <a href="product.html"><img src="/assets/Products/kids/image2.png" alt="product1" class="img-fluid"></a>
               <div class="text-center py-2">
                 <h6>Kid's Blue & Black Outfitt</h6>
                 <div class="rating text-warning font-size-12">
@@ -388,7 +388,7 @@
           </div>
           <div class="item" py-2>
             <div class="product font-rale">
-              <a href="#"><img src="/assets/Products/kids/image3.png" alt="product1" class="img-fluid"></a>
+              <a href="product.html"><img src="/assets/Products/kids/image3.png" alt="product1" class="img-fluid"></a>
               <div class="text-center py-2">
                 <h6>Kid's Black & Red Outfit</h6>
                 <div class="rating text-warning font-size-12">
@@ -407,7 +407,7 @@
           </div>
           <div class="item" py-2>
             <div class="product font-rale">
-              <a href="#"><img src="/assets/Products/kids/image4.png" alt="product1" class="img-fluid"></a>
+              <a href="product.html"><img src="/assets/Products/kids/image4.png" alt="product1" class="img-fluid"></a>
               <div class="text-center py-2">
                 <h6>Kid's White & Navy Outfit</h6>
                 <div class="rating text-warning font-size-12">
@@ -426,7 +426,7 @@
           </div>
           <div class="item" py-2>
             <div class="product font-rale">
-              <a href="#"><img src="/assets/Products/kids/image5.png" alt="product1" class="img-fluid"></a>
+              <a href="product.html"><img src="/assets/Products/kids/image5.png" alt="product1" class="img-fluid"></a>
               <div class="text-center py-2">
                 <h6>Kid's Light Blue Dress</h6>
                 <div class="rating text-warning font-size-12">
@@ -467,7 +467,7 @@
         <div class="owl-carousel owl-theme">
           <div class="item" py-2>
             <div class="product font-rale">
-              <a href="#"><img src="/assets//Products/accessories/image1.png" alt="product1" class="img-fluid"></a>
+              <a href="product.html"><img src="/assets//Products/accessories/image1.png" alt="product1" class="img-fluid"></a>
               <div class="text-center py-2">
                 <h6>Oversized Glasses</h6>
                 <div class="rating text-warning font-size-12">
@@ -486,7 +486,7 @@
           </div>
           <div class="item" py-2>
             <div class="product font-rale">
-              <a href="#"><img src="/assets/Products/accessories/image2.png" alt="product1" class="img-fluid"></a>
+              <a href="product.html"><img src="/assets/Products/accessories/image2.png" alt="product1" class="img-fluid"></a>
               <div class="text-center py-2">
                 <h6>iPhone 11|12|13 Pro Phone Case </h6>
                 <div class="rating text-warning font-size-12">
@@ -505,7 +505,7 @@
           </div>
           <div class="item" py-2>
             <div class="product font-rale">
-              <a href="#"><img src="/assets/Products/accessories/image3.png" alt="product1" class="img-fluid"></a>
+              <a href="product.html"><img src="/assets/Products/accessories/image3.png" alt="product1" class="img-fluid"></a>
               <div class="text-center py-2">
                 <h6>NY Hat</h6>
                 <div class="rating text-warning font-size-12">
@@ -524,7 +524,7 @@
           </div>
           <div class="item" py-2>
             <div class="product font-rale">
-              <a href="#"><img src="/assets/Products/accessories/image4.png" alt="product1" class="img-fluid"></a>
+              <a href="product.html"><img src="/assets/Products/accessories/image4.png" alt="product1" class="img-fluid"></a>
               <div class="text-center py-2">
                 <h6>Yellow Watch w/Bird Design</h6>
                 <div class="rating text-warning font-size-12">
@@ -543,7 +543,7 @@
           </div>
           <div class="item" py-2>
             <div class="product font-rale">
-              <a href="#"><img src="/assets/Products/accessories/image5.png" alt="product1" class="img-fluid"></a>
+              <a href="product.html"><img src="/assets/Products/accessories/image5.png" alt="product1" class="img-fluid"></a>
               <div class="text-center py-2">
                 <h6>Black & Gold Watch</h6>
                 <div class="rating text-warning font-size-12">
