--- a/Frontend/html/login.html
+++ b/Frontend/html/login.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <title>FT - Login</title>
   <link rel="stylesheet" href="style.css">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&family=Poppins:wght@400;500;600&display=swap');
@@ -92,11 +93,21 @@
       width: 100%;
     }
 
+    .pass {
+      margin: -5px 0 20px 5px;
+      color: #a6a6a6;
+      cursor: pointer;
+    }
+
+    .pass:hover {
+      text-decoration: underline;
+    }
+
     input[type="submit"] {
       width: 100%;
       height: 50px;
       border: 1px solid;
-      background: #1b1b18;
+      background: #2b2b2b;
       border-radius: 25px;
       font-size: 18px;
       color: #e9f4fb;
@@ -130,13 +141,8 @@
 
 <body>
   <div class="center">
-    <h1>Create Account</h1>
+    <h1>Login</h1>
     <form method="post">
-      <div class="txt_field">
-        <input type="text" required>
-        <span></span>
-        <label>Email ID</label>
-      </div>
       <div class="txt_field">
         <input type="text" required>
         <span></span>
@@ -147,14 +153,9 @@
         <span></span>
         <label>Password</label>
       </div>
-      <div class="txt_field">
-        <input type="password" required>
-        <span></span>
-        <label>Re Password</label>
-      </div>
-      <input type="submit" value="Create Account">
+      <input type="submit" value="Login">
       <div class="signup_link">
-        Already have an account? <a href="#">Login</a>
+        Not a member? <a href="#">Signup</a>
       </div>
     </form>
   </div>
