--- a/Frontend/html/product.html
+++ b/Frontend/html/product.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>FashionThreads</title>
+  <title>FT - Product</title>
 
   <!-- Bootstrap CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -31,19 +31,19 @@
 
 <body>
 
-  <!-- start #header -->
-  <header id="header">
+   <!-- start #header -->
+   <header id="header">
     <div class="strip d-flex justify-content-between px-4 py-1 bg-light">
       <p class="font-rale font-size-12 text-black-50 m-0"> </p>
       <div class="font-rale font-size-14">
-        <a href="#" class="px-3 border-right border-left text-dark">Login</a>
-        <a href="#" class="px-3 border-right text-dark">Create Account</a>
+        <a href="login.html" class="px-3 border-right border-left text-dark">Login</a>
+        <a href="signup.html" class="px-3 border-right text-dark">Create Account</a>
       </div>
     </div>
 
     <!-- Primary Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand p-3" href="./index.html"><img src="./assets/Logo/1.png" alt="logo1"></a>
+      <a class="navbar-brand p-3" href="./index.html"><img src="/assets/Logo/1.png" alt="logo1"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -51,33 +51,21 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav m-auto font-rubik">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Men</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Women</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Kids</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Accessories</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Sale</a>
+            <a class="nav-link" href="/Frontend/html/index.html">Home</a>
           </li>
         </ul>
         <form action="#" class="font-size-14 p-3">
-          <a href="#" class="py-2 rounded-pill bg-primary">
+          <a href="cart.html" class="py-2 rounded-pill bg-primary">
             <span class="font-size-16 px-2 text-white"><i class="fas fa-shopping-cart"></i></span>
             <span class="px-3 py-2 rounded-pill text-dark bg-light">0</span>
           </a>
         </form>
       </div>
     </nav>
-    <!-- !Primary Navigation -->
+    <!-- !end Primary Navigation -->
 
   </header>
-  <!-- !start #header -->
+  <!-- !end #header -->
 
   <!-- start #main-site -->
   <main id="main-site">
